<resources>
    <string name="app_name">HDDTCustomer</string>

    <string name="welcome">HÓA ĐƠN ĐIỆN TỬ</string>

    <!--navigation view-->
    <string name="nav_lblHome">Trang chủ</string>
    <string name="nav_lblLookup">Tra cứu</string>
    <string name="nav_lblBill">Hóa đơn</string>
    <string name="nav_lblElecBill">Hóa đơn tiền điện</string>
    <string name="nav_lblWaterBill">Hóa đơn tiền nước</string>
    <string name="nav_lblTeleBill">Hóa đơn tiền viễn thông</string>
    <string name="nav_lblSystem">Hệ thống</string>
    <string name="nav_lblGuide">Hướng dẫn sử dụng</string>
    <string name="nav_lblConfig">Cấu hình</string>
    <string name="nav_lblContact">Liên hệ</string>
    <string name="nav_lblLogout">Đăng xuất</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--login view-->
    <string name="lblLoginView">HÓA ĐƠN ĐIỆN TỬ</string>
    <string name="lblUsername">Tên đăng nhập:</string>
    <string name="lblPassword">Mật khẩu:</string>
    <string name="lblForgetPW"><u>Quên mật khẩu</u></string>
    <string name="lblBtnLogin">Đăng nhập</string>
    <string name="hintUsername">mã KH or số ĐT</string>
    <string name="hintPassword">******</string>

    <!--forgotPW view-->
    <string name="forgotPassTitle">Quên mật khẩu</string>
    <string name="forgotPassGuide">Nhập số điện thoại để phục hồi mật khẩu:</string>
    <string name="forgotPassHint">Số điện thoại</string>
    <string name="forgotPassBtn">Gửi</string>

    <string name="phoneNumber_error">Your phone invalid</string>
    <string name="password_error">Your password invalid</string>

    <!--home-->
    <string name="lblHome">TRANG CHỦ</string>

    <string name="lblSearch">Search...</string>

    <!--lookup-->
    <string name="lblBillLookup">TRA CỨU HÓA ĐƠN</string>
    <string name="lblBillNumber">Số hóa đơn</string>
    <string name="lblBillType">Loại hóa đơn</string>
    <string name="lblBillTime_from">Từ ngày</string>
    <string name="lblBillTime_to">Đến ngày</string>
    <string name="lblBillSearch">Tìm kiếm</string>

    <!--guide-->
    <string name="lblConfig_mes">Thông báo khi có HD mới</string>

    <!--Bill detail-->
    <string name="lblBillDetail">CHI TIẾT</string>
    <string name="title_activity_cthd">CTHDActivity</string>
    <string name="cthd_sts">Trạng thái:</string>

    <string name="cthd_timepay">T/g thanh toán:</string>
    <string name="cthd_timepayV">8h ngày 02/06/2015</string>
    <string name="cthd_formpay">Hình thức thanh toán:</string>
    <string name="cthd_formpayV" >Tiền mặt</string>
    <string name="cthd_time">Thời gian:</string>
    <string name="cthd_fi">Chỉ số đầu:</string>
    <string name="cthd_di">Chỉ số cuối:</string>

    <!-- data change-->
    <string name="cthd_stsV">Đã thanh toán</string>
    <string name="cthd_timeV" />
    <string name="cthd_fiV" />
    <string name="cthd_diV" />
    <string name="cthd_moneyV">500.000</string>


    <string name="cthd_moneyCur">vnd</string>
    <string name="cthd_signKH">Chữ kí của KH</string>
    <string name="cthd_signTT">Chữ kí người thu tiền</string>
    <string name="cthd_money_label">Thành tiền</string>
    <string name="cthd_hdtd_dien">Hóa đơn tiền điện</string>
    <string name="cthd_hdtd_nuoc">Hóa đơn tiền nước</string>
    <string name="cthd_hdtd_vienthong">Hóa đơn tiền viễn thông</string>

    <!--Bill content-->
    <string name="lblBillContent">NỘI DUNG HÓA ĐƠN</string>
    <string name="descrip_bill_image">Bill Content</string>

    <!--send report-->
    <string name="phssTitle">PHẢN HỒI SAI SÓT</string>
    <string name="phss_title1">Tiêu đề:</string>
    <string name="phss_edt1">Sai sót HD kỳ 1 -2014</string>
    <string name="phss_title2">Nội dung:</string>
    <string name="phss_edt2">Sai địa chỉ công ty, \nCần cố gắng nhiều hơn</string>

    <string name="phss_btntoPhanHoi">Gửi phản hồi</string>
    <string name="phss_toast_label">THÔNG BÁO</string>
    <string name="phss_toast_content">Cảm ơn bạn đã phản hồi thông\ntin cho chúng tôi, chúng tôi sẽ\nsớm liên lạc với bạn.</string>


    <!--list bill-->
    <string name="lblBill">DANH SÁCH HÓA ĐƠN</string>
    <string name="lblElecBill">HÓA ĐƠN ĐIỆN</string>
    <string name="lblWaterBill">HÓA ĐƠN NƯỚC</string>
    <string name="lblTeleBill">HÓA ĐƠN VIỄN THÔNG</string>

    <string name="lblPeriod">Kỳ hóa đơn</string>
    <string name="lblCSDK">Chỉ số đầu kỳ</string>
    <string name="lblCSCK">Chỉ số cuối kỳ</string>
    <string name="lblSL">Sản lượng</string>
    <string name="lblSoTien">Số tiền</string>
    <string name="lblStatus0">Chưa thanh toán</string>
    <string name="lblStatus1">Đã thanh toán</string>

    <!--chart-->
    <string name="lblChart">BIỂU ĐỒ SỬ DỤNG</string>

    <!--config view-->
    <string name="configTitle">CẤU HÌNH</string>

    <!--guide view-->
    <string name="guideTitle">HƯỚNG DẪN SỬ DỤNG</string>
    <string name="guideContent">Nội dung hướng dẫn sử dụng</string>

    <!--notification-->
    <string name="lblNotify">THÔNG BÁO CƯỚC</string>
    <!--charges detail-->
    <string name="lblChargesDetail">CHI TIẾT CƯỚC</string>
    <string name="lblToSeeChart">Xem biểu đồ</string>
    <string name="lblPeriodEM">Tiền điện kỳ trước</string>
    <string name="ex_name">Huỳnh Thanh Sang</string>
    <string name="ex_cardID">PC012112016</string>
    <string name="ex_address">K90/06 Đồng Kè, Q.Liên Chiểu, Tp.Đà nẵng </string>

    <!--logout-->
    <string name="lblLgNotices">Thông báo</string>
    <string name="lblLgMsg">Bạn muốn thoát khỏi chương trình?</string>
    <!--icon font awesome-->
    <string name="icon_chevron_left">&#xf053; " Back "</string>
    <string name="icon_menu">&#xf0c9; ""</string>
    <string name="icon_arrow_left">&#xf060; ""</string>
    <string name="icon_arrow_right">&#xf061; ""</string>
    <string name="icon_right">&#xf022; ""</string>
    <string name="icon_check">&#xf00c; ""</string>
    <string name="icon_circle">&#xf10c; ""</string>
    <string name="icon_search">&#xf002; ""</string>
    <string name="icon_bar_chart">&#xf080; ""</string>
    <string name="icon_chevron_circle_right">&#xf138; ""</string>
    <string name="icon_calendar">&#xf073; ""</string>

    <string name="icon_refresh">&#xf021; ""</string>
    <string name="icon_file_text">&#xf15c; ""</string>
    <string name="icon_paper_plane">&#xf1d8; ""</string>
    <string name="icon_share">&#xf1e0; ""</string>

    <string name="icon_clock">&#xf017; ""</string>
    <string name="icon_dollar">&#xf155; ""</string>
    <string name="icon_check_circle">&#xf046;""</string>

    <!--font name-->
    <string name="VNFGotham">VNFGothamBook</string>
    <string name="font_fontawesome">font_fontawesome</string>

</resources>
