<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Main content-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainContent">
        <!--Header-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/headerMainView"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@color/colorLightBlue">

            <com.vnpt.hddtcustomer.graphics.font.CustomFontTextView
                app:font="@string/font_fontawesome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fontSizeNormal"
                android:text="@string/icon_menu"
                android:textColor="@color/colorWhite"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:id="@+id/btnToLeftMenu"
                android:clickable="true"
                />

            <com.vnpt.hddtcustomer.graphics.font.CustomFontTextView
                app:font="@string/VNFGotham"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fontSizeTitleMain"
                android:textColor="@color/colorWhite"
                android:text="@string/lblHome"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/titleMainView"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etSearchBill"
                android:hint="@string/lblSearch"
                android:textSize="@dimen/fontSizeDefault"
                android:layout_toEndOf="@+id/btnToLeftMenu"
                android:layout_toStartOf="@+id/btnToSearch"
                android:inputType="text"
                android:paddingTop="0dp"
                android:paddingBottom="8dp"
                android:visibility="invisible"/>

        </RelativeLayout>

        <!--Navigator-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/headerMainView"
            android:id="@+id/navigator"
            android:background="#CCD3D9">

            <!--Bar chart-->
            <com.vnpt.hddtcustomer.graphics.font.CustomFontTextView
                app:font="@string/font_fontawesome"
                style="@style/menuIcon"
                android:text="@string/icon_bar_chart"
                android:id="@+id/btnToChart"
                android:visibility="gone"/>

            <!--Search-->
            <com.vnpt.hddtcustomer.graphics.font.CustomFontTextView
                app:font="@string/font_fontawesome"
                style="@style/menuIcon"
                android:text="@string/icon_search"
                android:id="@+id/btnToSearch"/>



        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fragMainContent"
            android:layout_below="@+id/navigator"/>
    </RelativeLayout>

    <include
        layout="@layout/list_left_menu"/>

</RelativeLayout>