<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Navigator-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#CCD3D9"
        android:id="@+id/navigatorBill">

        <!--Bar chart-->
        <com.vnpt.hddtcustomer.graphics.font.CustomFontTextView
            app:font="@string/font_fontawesome"
            style="@style/tabMenuIcon"
            android:text="@string/icon_bar_chart"
            android:id="@+id/btnChart"/>

        <!--Search-->
        <com.vnpt.hddtcustomer.graphics.font.CustomFontTextView
            app:font="@string/font_fontawesome"
            style="@style/tabMenuIcon"
            android:text="@string/icon_search"
            android:id="@+id/btnSearch"/>

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/lvBill"
        android:divider="@null"
        android:dividerHeight="0dp"/>

</LinearLayout>